[package]
name = "network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["rt", "net", "sync", "macros", "time"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
thiserror = "1.0.38"
bytes = "1.4.0"
log = "0.4.17"
futures = "0.3.28"
rand = { version = "0.8.5", features = ["small_rng"] }
async-trait = "0.1.68"
rustls-pemfile = "1.0.2"
tokio-rustls = "0.24.1"
webpki = "0.22.0"
[dev-dependencies]
bincode = "1.3.3"
